# WhisperShare

./: .gitignore  LICENSE  README.md  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro  release.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: whisper_jni.cpp
app/src/main/kotlin/io/whispershare/: AppPreferences.kt  AudioDecoder.kt  Benchmark.kt  BenchmarkActivity.kt  MainActivity.kt  ModelManager.kt  ShareUtils.kt  TranscribeActivity.kt  TranscriptHistory.kt  TranscriptionService.kt  WhisperApp.kt  WhisperEngine.kt
app/src/main/kotlin/io/whispershare/ui/: BenchmarkScreen.kt  HistoryScreen.kt  HomeScreen.kt  TranscribeScreen.kt
app/src/main/kotlin/io/whispershare/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_stat_transcribe.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/kotlin/io/whispershare/: AudioDecoderTest.kt  ModelManagerTest.kt  TranscriptHistoryTest.kt  WhisperEngineTest.kt  WhisperTextTest.kt
docs/: _config.yml  index.md  privacy.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 2.txt  3.txt
play/: README.md
tools/release/: expected-signing-cert.sha256
